--- a/PlantAlarm/Views/TodayPage.xaml
+++ b/PlantAlarm/Views/TodayPage.xaml
@@ -34,15 +34,15 @@
                 <StackLayout Margin="0,65,0,0" BackgroundColor="#F6FAFC">
                     <BoxView HeightRequest="1" HorizontalOptions="Fill" BackgroundColor="Gainsboro" />
                     <ListView ItemsSource="{Binding ActivitiesForDay}" HasUnevenRows="true" VerticalOptions="FillAndExpand" Margin="0,-6,0,0"
-                              SeparatorColor="Silver" CachingStrategy="RecycleElement">
+                              SeparatorColor="Silver" CachingStrategy="RecycleElement" SeparatorVisibility="None" ItemSelected="ActivityTapped">
                         <ListView.ItemTemplate>
                             <DataTemplate>
                                 <ViewCell Height="100">
                                     <StackLayout>
-                                        <StackLayout Orientation="Horizontal" Margin="10,10,10,5">
+                                        <StackLayout Orientation="Horizontal" Margin="10,10,10,3">
                                             <StackLayout Orientation="Vertical" HorizontalOptions="StartAndExpand">
                                                 <Label Text="{Binding Name}" FontAttributes="Bold" Margin="0,0,0,5"/>
-                                                <CollectionView ItemsSource="{Binding Plants}" Margin="10,0,0,0" InputTransparent="true">
+                                                <CollectionView ItemsSource="{Binding Plants}" Margin="10,0,0,0" InputTransparent="false">
                                                     <CollectionView.ItemsLayout>
                                                         <GridItemsLayout Orientation="Horizontal" Span="1" VerticalItemSpacing="3"
                                                                          HorizontalItemSpacing="5"/>
@@ -55,6 +55,10 @@
                                                                     <Image.Effects>
                                                                         <customEffects:RoundedCornerEffect Radius="5"/>
                                                                     </Image.Effects>
+                                                                    <Image.GestureRecognizers>
+                                                                        <TapGestureRecognizer Command="{Binding PlantImageTappedCommand}" 
+                                                                                              CommandParameter="{Binding Plant}" />
+                                                                    </Image.GestureRecognizers>
                                                                 </Image>
                                                             </StackLayout>
                                                         </DataTemplate>
@@ -63,6 +67,7 @@
                                             </StackLayout>
                                             <CheckBox IsChecked="{Binding PlantActivityItem.IsCompleted, Mode=TwoWay}" HorizontalOptions="End" />
                                         </StackLayout>
+                                        <BoxView HeightRequest="1" Color="Silver" HorizontalOptions="Fill" VerticalOptions="End"/>
                                     </StackLayout>
                                 </ViewCell>
                             </DataTemplate>
