--- a/PlantAlarm/Views/PlantDetailsPage.xaml
+++ b/PlantAlarm/Views/PlantDetailsPage.xaml
@@ -1,7 +1,14 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="PlantAlarm.Views.PlantDetailsPage">
+             x:Class="PlantAlarm.Views.PlantDetailsPage"
+             xmlns:customControls="clr-namespace:PlantAlarm.CustomControls"
+             xmlns:customEffects="clr-namespace:PlantAlarm.Effects"
+             xmlns:behaviors="clr-namespace:PlantAlarm.Behaviors"
+             Title="{Binding Plant.Name}">
     <ContentPage.Content>
+        <StackLayout>
+            
+        </StackLayout>
     </ContentPage.Content>
 </ContentPage>
