--- a/PlantAlarm/Views/PlantDetailsPage.xaml
+++ b/PlantAlarm/Views/PlantDetailsPage.xaml
@@ -7,8 +7,43 @@
              xmlns:behaviors="clr-namespace:PlantAlarm.Behaviors"
              Title="{Binding Plant.Name}">
     <ContentPage.Content>
-        <StackLayout>
-            
-        </StackLayout>
+        <ScrollView Margin="10">
+            <StackLayout>
+                <Label Text="Progress Pictures" FontAttributes="Bold" FontSize="Header" VerticalOptions="Start"/>
+                <CollectionView ItemsSource="{Binding PhotoViewModels}" VerticalOptions="Start" Margin="0,5,-5,10"
+                                ItemsLayout="HorizontalList" HorizontalScrollBarVisibility="Never">
+                    <CollectionView.ItemTemplate>
+                        <DataTemplate>
+                            <StackLayout Padding="0,0,5,0">
+                                <Image HeightRequest="80" WidthRequest="80" Aspect="AspectFill" Source="{Binding Photo.Url}">
+                                    <Image.Effects>
+                                        <customEffects:RoundedCornerEffect Radius="7" />
+                                    </Image.Effects>
+                                    <Image.GestureRecognizers>
+                                        <TapGestureRecognizer Command="{Binding TappedCommand}" CommandParameter="{Binding Photo}" />
+                                    </Image.GestureRecognizers>
+                                </Image>
+                            </StackLayout>
+                        </DataTemplate>
+                    </CollectionView.ItemTemplate>
+                </CollectionView>
+                <Label Text="Upcoming tasks" FontAttributes="Bold" FontSize="Header" VerticalOptions="Start"/>
+                <CollectionView ItemsSource="{Binding UpcomingActivities}" VerticalOptions="Start" Margin="0,10,0,0">
+                    <CollectionView.ItemTemplate>
+                        <DataTemplate>
+                            <Grid  Margin="10">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="6*" />
+                                    <ColumnDefinition Width="*" />
+                                </Grid.ColumnDefinitions>
+                                <Label Text="{Binding PlantTask.Name}" Grid.Column="0" FontSize="13"/>
+                                <Label Text="{Binding PlantActivityItem.Time, StringFormat='{0:MMM dd}'}" Grid.Column="1"
+                                        FontSize="12" FontAttributes="Italic"/>
+                            </Grid>
+                        </DataTemplate>
+                    </CollectionView.ItemTemplate>
+                </CollectionView>
+            </StackLayout>
+        </ScrollView>
     </ContentPage.Content>
 </ContentPage>
