--- a/PlantAlarm/Views/PlantDetailsPhotosPage.xaml
+++ b/PlantAlarm/Views/PlantDetailsPhotosPage.xaml
@@ -1,22 +1,25 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="PlantAlarm.Views.PlantDetailsPage"
+             x:Class="PlantAlarm.Views.PlantDetailsPhotosPage"
              xmlns:customControls="clr-namespace:PlantAlarm.CustomControls"
              xmlns:customEffects="clr-namespace:PlantAlarm.Effects"
              xmlns:behaviors="clr-namespace:PlantAlarm.Behaviors"
              Title="{Binding Title}">
+    <ContentPage.ToolbarItems>
+        <ToolbarItem IconImageSource="ShareIcon.png" Command="{Binding ShareImageCommand}" />
+    </ContentPage.ToolbarItems>
     <ContentPage.Content>
-        <StackLayout>
+        <StackLayout Orientation="Vertical">
             <CarouselView ItemsSource="{Binding Photos}" NumberOfSideItems="0" PeekAreaInsets="20" VerticalOptions="Start"
                           IsBounceEnabled="True" x:Name="PhotosCarousel" HorizontalScrollBarVisibility="Never"
-                          CurrentItem="{Binding SelectedPhoto, Mode=TwoWay}">
+                          CurrentItem="{Binding SelectedPhoto, Mode=TwoWay}" CurrentItemChanged="ScrollToCurrentItem">
                 <CarouselView.ItemTemplate>
                     <DataTemplate>
                         <StackLayout>
                             <customControls:SquaredImageContainerStack>
                                 <customControls:SquaredImage Source="{Binding Url}" Margin="0,20" Aspect="AspectFill"
-                                                             HorizontalOptions="Center" VerticalOptions="Center">
+                                                                HorizontalOptions="Center" VerticalOptions="Center">
                                     <customControls:SquaredImage.Effects>
                                         <customEffects:RoundedCornerEffect Radius="8" />
                                     </customControls:SquaredImage.Effects>
@@ -27,9 +30,14 @@
                 </CarouselView.ItemTemplate>
                 <CarouselView.ItemsLayout>
                     <ListItemsLayout Orientation="Horizontal" SnapPointsType="Mandatory" SnapPointsAlignment="Center"
-                                     ItemSpacing="10"/>
+                                        ItemSpacing="10"/>
                 </CarouselView.ItemsLayout>
             </CarouselView>
+            <StackLayout Margin="20,20,20,10" VerticalOptions="FillAndExpand">
+                <Button Text="Delete" Command="{Binding DeletePhotoCommand}" TextColor="Red" FontAttributes="Bold"
+                        CornerRadius="8" VerticalOptions="FillAndExpand" BorderColor="Red" BorderWidth="1"
+                        BackgroundColor="GhostWhite"/>
+            </StackLayout>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
